Add QR Decomposition
* QR 분해 코드 파일 생성
* QR 분해 Serial 코드 작성
[] QR 분해 CUDA 코드 작성 중

--- a/FinalProject/FinalProject/FinalProject.vcxproj
+++ b/FinalProject/FinalProject/FinalProject.vcxproj
@@ -78,6 +78,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <CudaCompile Include="kernel.cu" />
+    <CudaCompile Include="QRDecomposition.cu" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DS_definitions.h" />
+    <ClInclude Include="DS_timer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="DS_timer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
