--- a/FinalProject/FinalProject/FinalProject.vcxproj
+++ b/FinalProject/FinalProject/FinalProject.vcxproj
@@ -77,7 +77,18 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="kernel.cu" />
+    <CudaCompile Include="AffinityMatrix.cu" />
+    <CudaCompile Include="LaplacianMatrix.cu" />
+    <CudaCompile Include="LaplacianTest.cu" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AffinityMatrix.cuh" />
+    <ClInclude Include="DS_definitions.h" />
+    <ClInclude Include="DS_timer.h" />
+    <ClInclude Include="LaplacianMatrix.cuh" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="DS_timer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
