--- a/FinalProject/FinalProject/FinalProject.vcxproj
+++ b/FinalProject/FinalProject/FinalProject.vcxproj
@@ -75,7 +75,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>cudart_static.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>cusolver.lib;cudart_static.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
@@ -86,13 +86,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <CudaCompile Include="AffinityMatrix.cu" />
+    <CudaCompile Include="LaplacianMatrix.cu" />
+    <CudaCompile Include="LaplacianTest.cu" />
+    <CudaCompile Include="main.cu" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AffinityMatrix.cuh" />
+    <ClInclude Include="DataProcessing.h" />
     <ClInclude Include="DS_definitions.h" />
     <ClInclude Include="DS_timer.h" />
+    <ClInclude Include="LaplacianMatrix.cuh" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DataProcessing.cpp" />
     <ClCompile Include="DS_timer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
